--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,9 @@
 	<classpathentry kind="lib" path="libs/poi-ooxml-3.13-20150929.jar"/>
 	<classpathentry kind="lib" path="libs/poi-ooxml-schemas-3.13-20150929.jar"/>
 	<classpathentry kind="lib" path="libs/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Da-Jin/workspace/MASchedule/libs/ical4j-2.0-beta1.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.13.jar"/>
+	<classpathentry kind="lib" path="libs/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-simple-1.7.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
